--- a/views/newTask.ejs
+++ b/views/newTask.ejs
@@ -10,7 +10,7 @@
     <div class="container">
     <h1>Task Details</h1>
     <div class="form">
-    <form method="POST" action="/todo">
+    <form method="POST" action="/">
         <label for="task"></label>
         <input type="text" name="task" placeholder="Add your new Task">
         <br><br>
